# KusEngine

./: .clang-format  .gitignore  CMakeLists.txt  SR3.sln
SR3/: SR3.vcxproj  SR3.vcxproj.filters
cmake_scripts/: add_sources.cmake  check_file.cmake  cmake_scripts.cmake  download_archive.cmake  downloader.cmake  prepare_file.cmake  prepare_lib.cmake
headers/: background.hpp  core.hpp  domain.hpp  drawable.hpp  event.h  game.cpp  game.hpp  god.hpp  gui.hpp  player.hpp  program_state.h  spaceship.hpp  window.h
headers/core/: core.hpp  domain.hpp  drawable.hpp  event.hpp  game.hpp  game_object.hpp  getCPUTime.h  gui.hpp  my_time.hpp  program_state.hpp  window.hpp
headers/events/: close_event.hpp  event.hpp
headers/game/: date.hpp  game.hpp  game_object.hpp
headers/gui/: background.hpp  drawable.hpp  gui.hpp  window.hpp
headers/space/: game_object.hpp  planet.hpp  player.hpp  space_object.hpp  spaceship.hpp
resources/common/: level.txt  object.txt
resources/data/: game.info  main_menu.info  program_state.info
resources/states/game/scenes/: player.txt
resources/states/menu/scenes/: buttons.txt  player.txt
resources/texture/: Thumbs.db
resources/textures/: Thumbs.db
sources/: CMakeLists.txt  background.cpp  core.cpp  domaine.cpp  drawable.cpp  event.cpp  game.cpp  god.cpp  gui.cpp  main.cpp  my_time.cpp  player.cpp  program_state.cpp  sources.cmake  space_object.cpp  spaceship.cpp  window.cpp
sources/core/: CMakeLists.txt  core.cpp  core.hpp  core_sources.cmake  domain.cpp  domain.hpp  domaine.cpp  main.cpp  menu.cpp  menu.hpp  my_time.cpp  my_time.hpp  program_state.cpp  program_state.hpp  variable_storage.cpp  variable_storage.hpp
sources/domain/: CMakeLists.txt  dom_error_message.cpp  dom_error_message.hpp  dom_file_manager.cpp  dom_file_manager.hpp  dom_flags.hpp  dom_math.cpp  dom_math.hpp  dom_pair.hpp  dom_path.cpp  dom_path.hpp  dom_paths.cpp  dom_paths.hpp  dom_storage.hpp  dom_string.cpp  dom_string.hpp  dom_type.hpp  domain_sources.cmake  error_message.cpp  error_message.hpp  file_manager.cpp  file_manager.hpp  flags.hpp  holy_trinity.hpp  math.cpp  math.hpp  pair.hpp  path.cpp  path.hpp  storage.hpp  string.cpp  string.hpp
sources/event/: event.cpp  event.hpp  event_manager.cpp  event_manager.hpp  event_sources.cmake  gui_event.cpp  gui_event.hpp
sources/events/: CMakeLists.txt  close_event.cpp  event.cpp  event.hpp  evn_mouse_move.cpp  evn_mouse_move.hpp  key_event.cpp  key_event.hpp
sources/file/: common_data.cpp  common_data.hpp  file.cpp  file.hpp  file_router.cpp  file_router.hpp  file_sources.cmake  parser.cpp  parser.hpp  path.cpp  path.hpp  value.cpp  value.hpp  variable.hpp
sources/game/: CMakeLists.txt  background.cpp  background.hpp  date.cpp  date.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  game_sources.cmake  menu.cpp  menu.hpp
sources/gui/: CMakeLists.txt  background.cpp  background.hpp  basic_object.cpp  basic_object.hpp  close_event.cpp  close_event.hpp  drawable.cpp  drawable.hpp  drawable_and_writable.cpp  drawable_and_writable.hpp  event.cpp  event.hpp  fonts_storage.cpp  fonts_storage.hpp  gui.cpp  gui.hpp  gui_close_event.cpp  gui_close_event.hpp  gui_drawable.cpp  gui_drawable.hpp  gui_drawable_and_writable.cpp  gui_drawable_and_writable.hpp  gui_event.cpp  gui_event.hpp  gui_key_event.cpp  gui_key_event.hpp  gui_mouse_event.cpp  gui_mouse_event.hpp  gui_object.cpp  gui_object.hpp  gui_output_base.cpp  gui_output_base.hpp  gui_paths.hpp  gui_sources.cmake  gui_types.hpp  gui_window.cpp  gui_window.hpp  gui_writable.cpp  gui_writable.hpp  (+14 more)
sources/logic/: CMakeLists.txt  basic_object.cpp  basic_object.hpp  buttons.cpp  buttons.hpp  functor_storage.cpp  functor_storage.hpp  functors.cpp  functors.hpp  lgc_time.cpp  lgc_time.hpp  log_objects_storage.cpp  log_objects_storage.hpp  log_program_state.cpp  log_program_state.hpp  log_types.hpp  logic_object.cpp  logic_object.hpp  logic_sources.cmake  main_menu.cpp  main_menu.hpp  object_types.hpp  objects_storage.cpp  objects_storage.hpp  path.hpp  program_state.cpp  program_state.hpp  program_states_data.cpp  program_states_data.hpp  scene.cpp  scene.hpp  time.cpp  time.hpp  type.hpp
sources/main/: CMakeLists.txt  main.cpp  main_sources.cmake
sources/space/: CMakeLists.txt  game_object.cpp  planet.cpp  planet.hpp  player.cpp  player.hpp  space_object.cpp  space_object.hpp  space_sources.cmake  spaceship.cpp  spaceship.hpp
