add_library(
    domain

    "dom_error_message.hpp"
    "dom_error_message.cpp"

    "dom_file_manager.hpp"
    "dom_file_manager.cpp"

    "dom_flags.hpp"

    "dom_math.hpp"
    "dom_math.cpp"

    "dom_pair.hpp"

    "dom_path.hpp"
    "dom_path.cpp"

    "dom_string.hpp"
    "dom_string.cpp"

    "dom_type.hpp"
)

